--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 
 
 #Web Site Url
-website.url = https://testapi.princess.com/CICS/XRCV/XOXRC
+spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.datasource.url=jdbc:mysql://localhost:3306/navigate
+spring.datasource.username=navigate
+spring.datasource.password=navigate
+
+#spring.jackson.serialization.fail-on-empty-beans=false
