--- a/src/main/resources/env.prod/application.properties
+++ b/src/main/resources/env.prod/application.properties
@@ -4,7 +4,7 @@
 spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.datasource.url=jdbc:mysql://storage:3306/navigate
+spring.datasource.url=jdbc:mysql://localhost:3306/navigate
 spring.datasource.username=navigate
 spring.datasource.password=navigate
 
