Paging support added to ProductController. and application properties changed for prod end environments.

--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <mainClass>net.mobilim.NaviGateWeb.WebApp</mainClass>
+                            <classpathPrefix>lib/</classpathPrefix>
                         </manifest>
                     </archive>
                 </configuration>
