--- a/src/main/resources/env/dev/application.properties
+++ b/src/main/resources/env/dev/application.properties
@@ -11,4 +11,6 @@ spring.datasource.password=navigate
 #spring.jackson.serialization.fail-on-empty-beans=false
 
 logging.level.org.hibernate=ERROR
-logging.level.org.springframework=ERROR
+logging.level.org.springframework=INFO
+
+application.log.path=ahmet
