--- a/src/main/resources/env/prod/application.properties
+++ b/src/main/resources/env/prod/application.properties
@@ -1,6 +1,7 @@
 
-
-#Web Site Url
+spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -8,7 +9,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/navigate
 spring.datasource.username=navigate
 spring.datasource.password=navigate
 
-#spring.jackson.serialization.fail-on-empty-beans=false
-
 logging.level.org.hibernate=ERROR
 logging.level.org.springframework=ERROR
+
+application.log.path=/var/log/navigate
+
